--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.6.0",
     "react-merge-refs": "^3.0.2",
     "react-router-dom": "^7.8.2",
     "tailwind-merge": "^3.1.0"
